# Chtholly-Rust

./: .gitignore  CMakeLists.txt  Cargo.toml  Chtholly.md  README.md  RoadMap.md  Roadmap.md  Toolchain-LLVM18.cmake  agents.md  input.cns  run_tests.sh  test.cns  test_assignment_lifetimes.cns  test_borrowing.cns  test_do_while.cns  test_do_while.ll  test_dynamic_array.cns  test_enum.cns  test_function_lifetimes.cns  test_generics.cns  test_lifetime.cns  test_lifetime_dangle.cns  test_lifetime_dangle_3.cns  test_lifetime_dangle_intermediate.cns  test_lifetime_decl.cns  test_lifetime_scope.cns  test_move.cns  test_ownership.cns  test_static_array.cns  test_static_array.ll  test_string_switch.cns  test_switch.cns
chtholly/: .gitignore  Cargo.toml  RoadMap.md
chtholly/src/: ast.rs  lexer.rs  main.rs  parser.rs  token.rs  type_checker.rs
chtholly/src/codegen/: codegen.rs
chtholly/src/lexer/: tests.rs  token.rs
chtholly/src/parser/: ast.rs  lexer.rs  parser.rs  tests.rs  types.rs
chtholly_compiler/: .gitignore  Cargo.toml
chtholly_compiler/src/: main.rs
chtholly_compiler/src/codegen/: mod.rs
examples/: test.cns
include/: AST.h  Lexer.h  Parser.h
src/: AST.cpp  AST.h  ASTPrinter.cpp  ASTPrinter.h  ASTVisitor.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  CodeGenerator.cpp  CodeGenerator.h  Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Lifetime.h  LifetimeManager.cpp  LifetimeManager.h  Object.cpp  Object.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  TokenTypeToString.cpp  Type.cpp  Type.h  TypeResolver.cpp  TypeResolver.h  ast.h  ast.rs  ast_builder.rs  chtholly.pest  codegen.rs  compiler.rs  (+26 more)
src/AST/: ASTNode.h  ASTPrinter.h  Expr.h  ExprAST.h  ProgramAST.h  StmtAST.h
src/Lexer/: Lexer.cpp  Lexer.h  Token.h
src/Parser/: Parser.cpp  Parser.h
src/Semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol.h  SymbolTable.cpp  SymbolTable.h
src/Type/: Type.h
src/ast/: ASTPrinter.cpp  ASTPrinter.h  Expr.h  Stmt.h  ast.rs  mod.rs
src/codegen/: mod.rs
src/common/: Token.h
src/compiler/: ast.rs  codegen.rs  codegen_test.rs  lexer.rs  lexer_test.rs  mod.rs  parser.rs  parser_test.rs
src/driver/: main.cpp
src/lexer/: Lexer.cpp  Lexer.h  lexer.rs  mod.rs  tests.rs  token.rs
src/parser/: Parser.cpp  Parser.h  mod.rs  parser.rs  tests.rs
src/semantics/: mod.rs
src/snapshots/: chtholly__tests__compile_assignment_expression.snap  chtholly__tests__compile_binary_expression.snap  chtholly__tests__compile_for_statement.snap
tests/: CMakeLists.txt  CodeGenTestRunner.cpp  ControlFlowTests.cpp  LexerFeaturesTest.cpp  LexerTest.cpp  LexerTests.cpp  ParserFeaturesTest.cpp  ParserTest.cpp  ParserTests.cpp  SemanticAnalyzerTest.cpp  SemanticAnalyzerTests.cpp  SymbolTableTest.cpp  borrowing.cns  borrowing_test.cns  compiler_test.rs  debug_lexer.cpp  expression_test.cpp  for_test.cns  golden.ll  golden_if_else.ll  interpreter_test.cpp  lexer_test.cpp  lexer_test.rs  main.cpp  ownership.cns  ownership_test.cns  parser_test.cpp  parser_test.rs  parser_tests.rs  test.cns  test_classes.cpp  test_code_generator.cpp  test_control_flow.cpp  test_enums.cpp  test_expression_parser.cpp  test_functions.cpp  test_if_else.cpp  test_lexer.cpp  test_lifetime.cpp  test_move_semantics.cpp  (+5 more)
tests/codegen/: mod.rs  test_control_flow.rs  test_operators.rs  test_variables.rs
